Background: fixed css bug (screen overflow) in split-screen  - selectively removed superfluous margins (e.g. margin-bottom) on certain panes

--- a/react-pgt/public/css/PGT_Background.css
+++ b/react-pgt/public/css/PGT_Background.css
@@ -1,18 +1,30 @@
 /* PGT_Background.css */
-.PGT_Background{
-    position: absolute; /* necesary?? */
-  display: block;
-}
+
 
 .PGT_Background div.bg-grey{
-    position: absolute; /* necesary?? */
   background: lightgray;
-    display: block;
 }
 
 .PGT_Background div.bg-grey > div{
-    margin: 20px;
   display: inline-block;
+  margin: 20px;
   box-shadow: 0px 0px 4px 2px black;
   background: white;
+}
+
+
+/* somehow, this fixes display issues
+   with CSS margins and page overflow
+*/
+
+.PGT_Background div.bg-grey > div:last-child{
+  margin-bottom: 0px;
+}
+
+.PGT_Background div.bg-grey.vertical > div{
+  margin-bottom: 0px;
+}
+
+.PGT_Background div.bg-grey.quad > div:nth-child(3){
+  margin-bottom: 0px;
 }
